# image-toolkit

./: README.md  index.html  package.json  pyproject.toml  vite.config.ts
.github/workflows/: publish.yaml
scripts/linux/: build.sh
scripts/macos/: build.sh
scripts/windows/: build.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  pyproject.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src-python/image_toolkit/: __init__.py  __main__.py  batch_operations.py  tools.py  types.py  utils.py
src-tauri/src-python/image_toolkit/tools/: __init__.py
src-tauri/src-python/image_toolkit/types/: __init__.py
src-tauri/src-python/image_toolkit/utils/: __init__.py
src/client/: _apiTypes.d.ts  apiClient.ts
src/components/: caption-panel.tsx  files-panel.tsx  image-panel.tsx  tool-panel.tsx  topbar.tsx
src/lib/: hooks.ts  tools.tsx
src/operations/: dedup-tags.tsx  escape-parentheses.tsx  index.ts  remove-tags.tsx  remove-transparency.tsx  replace-tags.tsx  resolution-alignment.tsx  types.ts  unescape-parentheses.tsx
