[project]
name = "workspace"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pyfunctional>=1.5.0",
]

[dependency-groups]
dev = ["image-toolkit"]

[tool.uv.workspace]
members = ["src-tauri"]

[tool.uv.sources]
image-toolkit = { workspace = true }


[tool.pyright]
# See: <https://pytauri.github.io/pytauri/0.5/usage/tutorial/build-standalone/#get-portable-python>
# ref: <https://github.com/microsoft/pyright/blob/1.1.391/docs/configuration.md#environment-options>
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/dist",
    "**/.*",
    "**/pyembed",
    # 👇 necessary, because when `tauri-cli bundles python,
    # it will copy `pyembed` to the target directory (i.e., rust output dir).
    "**/target",
    # 👆
    "**/.venv",
    "**/.*",
    "src-tauri/frontend/",
]
